## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.18 2005/05/16 20:47:55 rrowan Exp $

include $(top_srcdir)/Makefile.base

EXTRA_DIST = \
 LinksOS2Icon.zip \
 README \
 colws.diff \
 elinks.conf \
 elinks-vim.diff \
 elinks.fortune \
 elinks.spec.in \
 elinks.vim \
 js-1.5-rc6a+elinks.patch \
 keybind-full.conf \
 keybind.conf \
 links_wps.zip \
 wipe-out-ssl \
 wipe-out-ssl.awk \
 user.css \
 TIPS-AND-TRICKS \
 conv/conf-links2elinks.pl \
 conv/mailcap.pl \
 conv/old_to_new_bookmarks.sh \
 conv/w3m2links.awk \
 conv/w3m2links.awk.in \
 guile/internal-hooks.scm \
 guile/user-hooks.scm \
 lua/babelfish.lua \
 lua/bm-to-elinks-bookmarks.lua \
 lua/bm.lua \
 lua/config.lua \
 lua/elinks-remote \
 lua/highlight.lua \
 lua/hooks.lua.in \
 lua/md5check.lua \
 lua/remote.lua \
 perl/hooks.pl \
 perl/config.pl \
 ruby/hooks.rb
