## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.62 2005/05/18 17:49:33 jonas Exp $

SUBDIRS = man

HTML_DIR = $(DESTDIR)html
MAN_DIR	 = $(DESTDIR)man
PDF_DIR	 = $(DESTDIR)pdf
XML_DIR	 = $(DESTDIR)xml

# Keep generated .txt files relative to the source directory
# and files they are included in.
TXT_DIR	 = $(top_srcdir)/doc/txt

DOC_DIRS = \
 $(HTML_DIR) \
 $(MAN_DIR)/man1 \
 $(MAN_DIR)/man5 \
 $(TXT_DIR) \
 $(XML_DIR)

# TODO: perl.pod should be pod2ized during make install. --pasky

# XXX: manual.txt is the master document and must be first.
MANUAL_FILES = \
 manual.txt \
 \
 bookmarks.txt \
 ecmascript.txt \
 exmode.txt \
 faq.txt \
 installation.txt \
 introduction.txt \
 lua-scripting.txt \
 mailcap.txt \
 marks.txt \
 mime.txt \
 remote.txt \
 small.txt \
 tabs.txt \
 terminals.txt \
 urlshortcuts.txt

EXTRA_DIST = \
 README \
 $(MANUAL_FILES) \
 color-model.txt \
 events.txt \
 feedback.txt \
 hacking.txt \
 index.txt \
 perl.pod \
 tools/help2doc \
 tools/make-elinks-manpage \
 tools/make-elinkskeys-manpage

### Script Dependencies
#

ELINKS	 = $(top_builddir)/src/elinks
KBDBIND	 = $(top_srcdir)/src/config/kbdbind.c
FEATURES = $(top_srcdir)/features.conf

### Scripts
#

HELP2DOC		= $(top_srcdir)/doc/tools/help2doc
IMPORT_FEATURES_CONF	= $(top_srcdir)/doc/tools/import-features.conf
MAKE_ELINKS_MANPAGE	= $(top_srcdir)/doc/tools/make-elinks-manpage
MAKE_ELINKSKEYS_MANPAGE	= $(top_srcdir)/doc/tools/make-elinkskeys-manpage

# FIXME: $(MAN_ELINKSKEYS)
MAN_DOCS = \
 $(MAN_DIR)/man1/elinks.1.in \
 $(MAN_DIR)/man5/elinks.conf.5 \
 $(MAN_DIR)/man5/elinkskeys.5

# FIXME: $(HTML_DIR)/elinkskeys.5.html
HTML_DOCS = \
 $(HTML_DIR)/elinks.1.html \
 $(HTML_DIR)/manual.html-chunked \
 $(HTML_DIR)/manual.html

PDF_DOCS = \
 $(PDF_DIR)/manual.pdf

install-data-local: install-data-local-@CONFIG_DOC@
man-docs: doc-dirs $(MAN_DOCS)
html-docs: doc-dirs $(HTML_DOCS)
pdf-docs: doc-dirs $(PDF_DOCS)
all-docs: man-docs html-docs pdf-docs

### Build Rules
#

doc-dirs:
	$(INSTALL) -d $(DOC_DIRS)

# $(MAN_DIR) intentionally left out
clean-local:
	$(RM) -r $(HTML_DIR) $(XML_DIR) $(TXT_DIR)


# Autogenerated asciidoc files.

$(TXT_DIR)/import-features.conf.txt: $(FEATURES) doc-dirs $(IMPORT_FEATURES_CONF)
	$(IMPORT_FEATURES_CONF) > $@

$(TXT_DIR)/elinks.1.%.txt: $(MAKE_ELINKS_MANPAGE) doc-dirs $(ELINKS)
	$(MAKE_ELINKS_MANPAGE) $@ $(ELINKS) > $@

$(TXT_DIR)/elinkskeys.5.%.txt: $(MAKE_ELINKSKEYS_MANPAGE) doc-dirs $(KBDBIND)
	$(MAKE_ELINKSKEYS_MANPAGE) $< $(KBDBIND) > $@


# Man Pages

$(XML_DIR)/%.man.xml: $(TXT_DIR)/%.man.txt doc-dirs
	$(ASCIIDOC) -b docbook -d manpage -o $@ $<

$(MAN_DIR)/man/man1/elinks.1.in: $(XML_DIR)/elinks.1.man.xml doc-dirs
	$(XMLTO) -o $(MAN_DIR)/man1 man $<
	mv $(MAN_DIR)/man1/elinks.1 $@

$(MAN_DIR)/man/man1/elinkskeys.5: $(XML_DIR)/elinkskeys.5.man.xml doc-dirs
	$(XMLTO) man $<
	sed -e 's/\\fI\\fR'\''/\\fI\\'\''\\fR/' < $@ > $(MAN_ELINKSKEYS)

$(MAN_DIR)/man/man5/elinks.conf.5: doc-dirs $(ELINKS)
	$(HELP2DOC) --elinks=$(ELINKS) --elinksconf > $(MAN_ELINKS_CONF)

# XHTML/CSS Man Pages

$(HTML_DIR)/%.html: $(TXT_DIR)/%.html.txt doc-dirs
	$(ASCIIDOC) -b css-embedded -d manpage -o $@ $<

# The Manual

$(HTML_DIR)/manual.html: $(MANUAL_FILES) doc-dirs $(TXT_DIR)/import-features.conf.txt
	$(ASCIIDOC) -b css-embedded -d book -o $@ -n $<

$(XML_DIR)/manual.xml: $(MANUAL_FILES) doc-dirs $(TXT_DIR)/import-features.conf.txt
	$(ASCIIDOC) -b docbook -d book -o $@ $<

$(HTML_DIR)/manual.html-chunked: $(XML_DIR)/manual.xml doc-dirs
	$(XMLTO) -o $@ html $<

$(PDF_DIR)/manual.pdf: $(XML_DIR)/manual.xml doc-dirs
	$(JW) -o $(PDF_DIR) -b pdf $<
