## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.14 2005/05/02 12:15:51 jonas Exp $

SUBDIRS = manpages

EXTRA_DIST = \
 README \
 book.xml \
 bookmarks.xml \
 exmode.xml \
 introduction.xml \
 mailcap.xml \
 marks.xml \
 mime.xml \
 remote.xml \
 tabs.xml \
 terminals.xml \
 urlshortcuts.xml
