## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.15 2005/05/03 23:48:15 jonas Exp $

SUBDIRS = manpages

EXTRA_DIST = \
 README \
 book.xml \
 bookmarks.xml \
 config/elinks.conf.xml \
 config/examples.xml \
 config/syntax.xml \
 exmode.xml \
 introduction.xml \
 mailcap.xml \
 marks.xml \
 mime.xml \
 remote.xml \
 tabs.xml \
 terminals.xml \
 urlshortcuts.xml
