## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.16 2005/05/17 16:14:42 jonas Exp $

EXTRA_DIST = \
 README \
 book.xml \
 bookmarks.xml \
 config/elinks.conf.xml \
 config/examples.xml \
 config/syntax.xml \
 exmode.xml \
 introduction.xml \
 mailcap.xml \
 marks.xml \
 mime.xml \
 remote.xml \
 tabs.xml \
 terminals.xml \
 urlshortcuts.xml
