## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.24 2004/01/03 15:08:46 zas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libbfu.a
libbfu_a_SOURCES = \
 button.c \
 button.h \
 checkbox.c \
 checkbox.h \
 dialog.c \
 dialog.h \
 group.c \
 group.h \
 hierbox.c \
 hierbox.h \
 hotkey.c \
 hotkey.h \
 inpfield.c \
 inpfield.h \
 inphist.c \
 inphist.h \
 leds.c \
 leds.h \
 listbox.c \
 listbox.h \
 listmenu.c \
 listmenu.h \
 menu.c \
 menu.h \
 msgbox.c \
 msgbox.h \
 style.c \
 style.h \
 text.c \
 text.h \
 widget.c \
 widget.h

