## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.13 2002/12/06 20:28:47 pasky Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libconfig.a
libconfig_a_SOURCES = \
 cmdline.c \
 cmdline.h \
 conf.c \
 conf.h \
 dialogs.c \
 dialogs.h \
 kbdbind.c \
 kbdbind.h \
 options.c \
 options.h \
 opttypes.c \
 opttypes.h \
 urlhist.c \
 urlhist.h
