## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.15 2005/05/16 19:50:04 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libconfig.a
libconfig_a_SOURCES = \
 actions-edit.inc \
 actions-main.inc \
 actions-menu.inc \
 cmdline.c \
 cmdline.h \
 conf.c \
 conf.h \
 dialogs.c \
 dialogs.h \
 kbdbind.c \
 kbdbind.h \
 options.c \
 options.h \
 options.inc \
 opttypes.c \
 opttypes.h \
 urlhist.c \
 urlhist.h
